--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+body{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
 .input-group{
     display: flex;
     flex-direction: column;
@@ -6,5 +10,10 @@
 
 #forecast{
     padding: 16px;
+    margin-top: 0 !important;
 }
 
+/* .forecast{
+    display: flex;
+    flex-direction: column;
+} */
